--- a/style.css
+++ b/style.css
@@ -210,6 +210,9 @@ h2 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
     z-index: 9999;
+    display:flex;
+    align-items:center;
+    justify-content:center;
 }
 .whatsapp-btn:hover {
     transform: translateY(-5px);
